bump: release version 0.1.0 (#29)
* build: release version 0.1.0

* build: begin 0.2.0 development